--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,33 @@
     <title>Foodi-Woodi</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <div class="nav-bar">
 
+        
+        <div class="logo-img">
+            <img src="./assets/img/burger.png" class="logo-img-png" alt="non">
+        </div>
+
+        <div class="home">
+            <a href="./pages/home.html">Home</a>
+        </div>
+
+        <div class="home">
+            <a href="./pages/home.html">Home</a>
+        </div>
+
+        <div class="home">
+            <a href="./pages/home.html">Home</a>
+        </div>
+
+                <div class="home">
+            <a href="./pages/home.html">Home</a>
+        </div>
+
+
     </div>
 </body>
+
 </html>
