nav-bar,color changed

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </div>
 
         <div class="home">
-            <a href="./pages/home.html">Home</a>
+            <a href="./pages/home.html">Add-Food</a>
         </div>
 
         <div class="home">
-            <a href="./pages/home.html">Home</a>
+            <a href="./pages/home.html">About</a>
         </div>
 
                 <div class="home">
-            <a href="./pages/home.html">Home</a>
+            <a href="./pages/home.html">Sign-Up</a>
         </div>
 
 
